actualización del proyecto

--- a/package.json
+++ b/package.json
@@ -6,24 +6,36 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@eslint/js": "^9.2.0",
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^4.5.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.6.4",
+        "eslint": "^9.2.0",
+        "eslint-plugin-vue": "^9.25.0",
+        "globals": "^15.1.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0",
-        "vue": "^3.2.31"
+        "vite-plugin-vuetify": "^2.0.3",
+        "vue": "^3.2.31",
+        "vuetify": "^3.6.3"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.21",
+        "@heroicons/vue": "^2.1.3",
         "@intlify/unplugin-vue-i18n": "^4.0.0",
+        "@mdi/font": "^7.4.47",
+        "@vueuse/core": "^10.9.0",
+        "flag-icons": "^7.2.1",
         "pinia": "^2.1.7",
         "pinia-plugin-persistedstate": "^3.2.1",
         "primeicons": "^7.0.0",
         "primevue": "^3.52.0",
-        "vue-i18n": "^9.13.1"
+        "vue-i18n": "^9.13.1",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
