--- a/package.json
+++ b/package.json
@@ -27,15 +27,27 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.21",
         "@heroicons/vue": "^2.1.3",
+        "@iconify-json/bx": "^1.1.6",
+        "@iconify-json/bxl": "^1.1.6",
+        "@iconify-json/bxs": "^1.1.6",
+        "@iconify-json/mdi": "^1.1.52",
+        "@iconify/tools": "^2.2.0",
+        "@iconify/utils": "^2.1.5",
+        "@iconify/vue": "4.1.1",
         "@intlify/unplugin-vue-i18n": "^4.0.0",
         "@mdi/font": "^7.4.47",
         "@vueuse/core": "^10.9.0",
+        "animate.css": "^4.1.1",
+        "aos": "^2.3.4",
+        "boxicons": "^2.1.4",
         "flag-icons": "^7.2.1",
         "pinia": "^2.1.7",
         "pinia-plugin-persistedstate": "^3.2.1",
         "primeicons": "^7.0.0",
         "primevue": "^3.52.0",
+        "unplugin-auto-import": "^0.17.1",
         "vue-i18n": "^9.13.1",
-        "vue-toastification": "^2.0.0-rc.5"
+        "vue-toastification": "^2.0.0-rc.5",
+        "wow.js": "^1.2.2"
     }
 }
