--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "unplugin-auto-import": "^0.17.1",
         "vue-i18n": "^9.13.1",
         "vue-toastification": "^2.0.0-rc.5",
+        "vue3-smooth-scroll": "^0.8.1",
         "wow.js": "^1.2.2"
     }
 }
